2.33 "" (release xx.xx.xxxx)

  *

2.32 "Evil Aliens" (release 15.9.2005)

  * Add <noindex> to known invalid HTML tag list. This avoids warnings
    when such a tag is encountered.
    Type: feature
    Changed: wc/filter/html/__init__.py

  * Fix translation of web GUI pages.
    Type: bugfix
    Changed: wc/__init__.py

  * Disable SSLv2 connections. SSLv2 is old and mostly unused.
    Type: feature
    Changed: wc/proxy/ssl.py

  * Use correct port number for relative client request URLs.
    This fixes the SSL gateway functionality.
    Type: bugfix
    Changed: wc/proxy/{Http,Ssl}Client.py

  * Prevent Mozilla Firefox crasher when hostname has lots of dashes.
    Type: feature
    Changed: wc/filter/html/HtmlSecurity.py, wc/filter/tests/Rewriter.py

  * Compiled extensions (.pyd) are now compressed with UPX. This
    reduces the download size of the Windows .exe installer.
    Type: feature
    Changed: setup.py

2.31 "Nothing" (release 30.8.2005)

  * Added missing http:// scheme to google.html error page.
    Type: bugfix
    Changed: wc/google.py, templates/classic/google.html

  * Only try to recognize MIME type if enough data is available.
    Type: bugfix
    Changed: wc/filter/MimeRecognizer.py

  * Ensure that HTML tag and attribute names are ASCII safe.
    Other modules (eg. the HtmlSecurity filter) rely on that assumption.
    Type: feature
    Changed: wc/HtmlParser/htmllex.l

  * Ability to use placeholders when replacing header values. The
    "Referer:" header for example is now always the request domain.
    Type: feature
    Changed: wc/filter/Header.py

  * Added forgotten ATTRNAME to part value list and to filter method.
    Type: bugfix
    Changed: wc/filter/rules/HtmlrewriteRule.py

  * Updated spidermonkey JavaScript library from upstream CVS as of
    20050828.
    Type: feature
    Changed: libjs/*

  * Updated blacklist filters as of 20050828.
    Type: feature
    Changed: config/blacklist*

  * Filter updates: